fixed wrapping of Login and create account

--- a/src/components/Navigator/_navigation.scss
+++ b/src/components/Navigator/_navigation.scss
@@ -44,6 +44,9 @@
   
 }
 
+.login-button, .create-account-button{
+  white-space: nowrap;
+}
 .site-logo{
   margin-left: 30px;
 }
